<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="c_current">CE</string>
    <string name="btn_chu">/</string>
    <string name="btn_cheng">*</string>
    <string name="btn_jian">-</string>
    <string name="btn_jia">+</string>
    <string name="btn_dian">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>
